--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: my_app_production
-  username: my_app
-  password: <%= ENV['MY_APP_DATABASE_PASSWORD'] %>
+  database: my_app_development
+  #username: my_app
+  #password: <%= ENV['MY_APP_DATABASE_PASSWORD'] %>
